--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ hibernate.hbm2ddl.auto=update
 
 #Oracle
 jdbc.driverClassName2 =com.mysql.jdbc.Driver
-jdbc.url2 = jdbc:mysql://localhost:3306/test1
+jdbc.url2 = jdbc:mysql://localhost:3306/test
 jdbc.username2 = root
 jdbc.password2 = 
 
